@@ -76,3 +76,4 @@ For 0.3:
 * Ivan Evtukhovich <evtuhovich@gmail.com>
 * Madhumitha Viswanathan <madhuvishy@gmail.com>
 * Fabio Prina <fabio@nimsh.com>
+* Erin McLaughlin <emclaughlin1215@gmail.com>
