@@ -12,6 +12,7 @@
     * Right click behaviour in the task treeview is now consistant with other GNOME applications, by Jonathan Barnoud
     * Underscore characters in tasks not treated as accelerators (bug #676088) fixed, by Madhumitha Viswanathan
     * Setting start/due date by a right click menu in the task browser, by Fabio Prina & Kevin Mehall
+    * Fixed bug #584667, indicating missing plugin dependencies, by Erin McLaughlin
 
 2010-03-01 Getting Things GNOME! 0.2.2
     * Autostart on login, by Luca Invernizzi
